# studio-fighter-game

./: Cargo.toml  default.nix  readme.md  todo.md
assets/characters/: pg.ron  test.ron
src/: character_selection.rs  characters.rs  collisions.rs  components.rs  debug.rs  gamestate.rs  hitbox.rs  main.rs  systems.rs  title_screen.rs
src/character/: animation.rs  mod.rs
