[package]
name = "smash"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy =  "0.14.1"
bevy-inspector-egui = "0.25.2"
bevy_common_assets = { version = "0.11.0", features = ["ron"] }
serde = { version = "1.0.209", features = ["derive", "serde_derive"] }
