[package]
name = "smash"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[dependencies]
#bevy = { version = "0.14.2", features = ["wayland"] }
bevy = { version = "0.13.2", features = ["dynamic_linking", "wayland"] }
bevy-inspector-egui = "0.24"
bevy_common_assets = { version = "0.10.0", features = ["ron"] }
serde = { version = "1.0.209", features = ["derive", "serde_derive"] }
